# polarai-framework

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  dependencies.cmake
.devcontainer/: devcontainer.json
.github/workflows/: linux.yml
.teamcity/: settings.kts
.teamcity/settings/: AthenaProject.kt  BuildTypes.kt
CMakeModules/: AthenaIntegrationTest.cmake  AthenaTarget.cmake  CPM.cmake  PolarTarget.cmake
docs/design/llvm/: 02_mlir_graph_reference.md  mlir_graph_dialect.md
include/athena/backend/llvm/: CodeGen.h  LLVMExecutor.h
include/athena/core/: AbstractNode.h  Accessor.h  Entity.h  ForwardDeclarations.h  Generator.h  Graph.h  Node.h  NodeType.h  Operation.h  Optimizer.h  PublicEntity.h  Wrapper.h  libinfo.h
include/athena/core/context/: Context.h
include/athena/core/graph/: Graph.h  Traversal.h
include/athena/core/inner/: GenBuiltins.h  GlobalTables.h  InnerFunctions.h
include/athena/core/internal/: Executor.h
include/athena/core/loader/: AbstractLoader.h
include/athena/core/node/: AbstractNode.h  InputNode.h  Node.h  NodeType.h  OutputNode.h
include/athena/core/operation/: Operation.h
include/athena/core/tensor/: DataType.h  ShapeView.h  TensorShape.h
include/athena/io/: DotModel.h
include/athena/loaders/: ConstantLoader.h  DummyLoader.h  MemcpyLoader.h
include/athena/loaders/internal/: ConstantLoaderInternal.h  DummyLoaderInternal.h  MemcpyLoaderInternal.h
include/athena/operation/: AddOperation.h  CombineOperation.h  CopyOperation.h  DivideOperation.h  LogLossOperation.h  MatMulOperation.h  MulConcatOperation.h  MulOperation.h  SigmoidOperation.h
include/athena/operation/internal/: AddOperationInternal.h  CombineOperationInternal.h  CopyOperationInternal.h  DivideOperationInternal.h  LogLossOperationInternal.h  MatMulOperationInternal.h  MulConcatOperationInternal.h  MulOperationInternal.h  SigmoidOperationInternal.h
include/athena/ops/: AddOperation.h  MSELossFunction.h
include/athena/utils/: STLExtras.h
include/athena/utils/allocator/: AbstractMemoryResource.h  Allocator.h  StatelessMemoryResource.h
include/athena/utils/error/: Error.h  FatalError.h
include/athena/utils/internal/: TupleContainers.h
include/athena/utils/logger/: AbstractLogger.h  Logger.h  log.h
include/athena/utils/string/: String.h  StringView.h
include/polarai/backend/generic/: GenericExecutor.hpp
include/polarai/core/: ForwardDeclarations.hpp
include/polarai/core/context/: Context.hpp
include/polarai/core/graph/: EdgeMark.hpp
include/polarai/core/internal/: GenBuiltins.hpp
include/polarai/core/node/: Node.hpp  OutputNode.hpp
include/polarai/core/tensor/: Accessor.hpp
include/polarai/io/: DotModel.hpp
include/polarai/operation/: Conv2DOperation.hpp  MulConcatOperation.hpp  ReLUOperation.hpp  SoftmaxOperation.hpp
include/polarai/operation/internal/: Conv2DOperationInternal.hpp  DivideOperationInternal.hpp  Pool2DOperationInternal.hpp  ReLUOperationInternal.hpp  SoftmaxOperationInternal.hpp
include/polarai/utils/allocator/: Allocator.hpp
include/polarai/utils/internal/: TupleContainers.hpp
scripts/: build.py
src/: CMakeLists.txt
src/backend/generic/lib/: CMakeLists.txt  CodeGen.cpp  ExecutorImpl.hpp  GenericExecutor.cpp  GraphPartitionPlanner.hpp  LLVMExecutor.cpp
src/backend/generic/runtime/: CMakeLists.txt
src/backend/generic/runtime/cuda/: CMakeLists.txt  CudaDevice.h  CudaEvent.h  api.cpp
src/backend/generic/runtime/driver/: CMakeLists.txt  RuntimeDriver.h  config.h.in
src/backend/generic/runtime/hip/: CMakeLists.txt  HIPDevice.h  api.cpp
src/backend/llvm/: AthenaJIT.cpp  CMakeLists.txt  CodeGen.cpp  LLVMExecutor.cpp  LLVMGenerator.cpp  builtins.td  tablegen.py
src/backend/llvm/allocators/: LayerAllocator.cpp  LayerAllocator.h  TrivialAllocator.h
src/backend/llvm/codegen/: Mangler.cpp  Mangler.h  add.cpp  common.h  matrix.cpp  register_default_functors.cpp
src/backend/llvm/jit/: AthenaJIT.cpp  AthenaJIT.h  CMakeLists.txt
src/core/: AbstractNode.cpp  Accessor.cpp  CMakeLists.txt  Generator.cpp  GradientDescent.cpp  Graph.cpp  Node.cpp
src/core/graph/: Graph.cpp
src/core/inner/: Tensor.cpp
src/io/: CMakeLists.txt  DotModel.cpp
src/loaders/: CMakeLists.txt
src/operation/: CMakeLists.txt
src/operation/internal/: Conv2DOperationInternal.cpp  DivideOperationInternal.cpp  Pool2DOperationInternal.cpp  ReLUOperationInternal.cpp  SoftmaxOperationInternal.cpp
src/ops/: AddOperation.cpp  GEMMOperation.cpp  MSELossFunction.cpp
src/utils/: CMakeLists.txt  Memory.cpp
tests/: CMakeLists.txt
tests/integration/JIT/: CMakeLists.txt  core.cpp  linreg.cpp  vector_add.cpp
tests/integration/LegacyRuntimeDriver/: CMakeLists.txt
tests/integration/OpenCLRuntime/: main.cpp
tests/integration/RuntimeDriver/: CMakeLists.txt  main.cpp
tests/integration/framework/: CMakeLists.txt  framework.cpp
tests/integration/operations/: CMakeLists.txt  Conv2DOperation.cpp  Pool2DOperation.cpp  ReLUOperation.cpp
tests/testutils/: TestAllocator.h
tests/unit/backend/llvm/: AthenaJIT.cpp  CMakeLists.txt
tests/unit/core/: CMakeLists.txt  Graph.cpp  Node.cpp
tests/unit/io/: DotModel.cpp
tests/unit/loaders/: CMakeLists.txt
utils/chaos/test/: CMakeLists.txt
utils/dialects/: CMakeLists.txt
utils/dialects/include/: CMakeLists.txt
utils/dialects/lib/AthenaGraph/: AthenaGraphOps.cpp  CMakeLists.txt
utils/dialects/lib/AthenaGraph/kernels/: AddOp.cpp  CopyOp.cpp  DivideOp.cpp  FillOp.cpp  LogLossOp.cpp  MatMulOp.cpp  MulConcatOp.cpp  MulOp.cpp  SigmoidOp.cpp
utils/dialects/lib/Conversion/: CMakeLists.txt  GraphToRuntimePass.cpp  GraphToRuntimePass.cpp.bak  RuntimeToLLVM.cpp
utils/dialects/lib/Passes/: CMakeLists.txt  DeployDefaultFunctions.cpp  KernelOutliningPass.cpp  ProduceKernelsPass.cpp  RelationDestructorPass.cpp  ReleaseDependencyPass.cpp  SaveKernelPass.cpp
utils/dialects/tools/: CMakeLists.txt
utils/lsdevice/: CMakeLists.txt  main.cpp
utils/lspolar/: CMakeLists.txt  main.cpp
utils/picomath/: CMakeLists.txt
utils/picomath/lib/: CMakeLists.txt
utils/picomath/test/: CMakeLists.txt
(+160 files in other folders)
